# mundiales-centro-analitica

./: .dockerignore  .env.example  ARCHITECTURE.md  AUTHORS  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  render.yaml  requirements.txt  run.py
app/: main.py
app/analytics/: elo.py  evaluation.py  historical.py  ml.py  montecarlo.py  poisson.py  poisson_math.py  ratings.py  registry.py
app/api/: routes.py
app/core/: config.py
app/domain/: entities.py
app/infrastructure/: database.py  http.py  seed.py
app/infrastructure/sources/: football_api.py  wikipedia.py
app/services/: __init__.py  ingestion.py  scheduler.py
app/web/static/: app.js  index.html  manifest.webmanifest  style.css  sw.js
